HVAC Backup 2/objects/TOPs_Matrix__c(1).object
<CustomObject>
    <fields>
        <fullName>Billing_Due_Period__c</fullName>
        <label>Billing Due Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sector__c</fullName>
        <label>Customer Sector</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Credit_Days__c</fullName>
        <label>Payment Credit Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TOPs Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Sector__c</columns>
        <columns>Billing_Frequency__c</columns>
        <columns>Billing_Due_Period__c</columns>
        <columns>Payment_Credit_Days__c</columns>
        <columns>Department__c</columns>
        <columns>Contract_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>TOPs Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TOPs Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>